predrok/naloga1/prev25/src/compiler/phase/synan/Prev25Parser.java
// Generated from Prev25Parser.g4 by ANTLR 4.13.2


	package compiler.phase.synan;
	
	import java.util.*;
	import compiler.common.report.*;
	import compiler.phase.lexan.*;
	import compiler.phase.abstr.*;
	import compiler.phase.seman.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"doclint:missing", "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Prev25Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, AND=2, OR=3, EQU=4, NEQ=5, LT=6, GT=7, LEQ=8, GEQ=9, MUL=10, 
		DIV=11, MOD=12, PLUS=13, MINUS=14, EXCL=15, DOT=16, POW=17, ASSIGN=18, 
		COLON=19, COMMA=20, LBRACE=21, RBRACE=22, LPARAN=23, RPARAN=24, LBRCKT=25, 
		RBRCKT=26, INT=27, BOOL=28, CHAR=29, DO=30, ELSE=31, END=32, FALSE=33, 
		FUN=34, IF=35, IN=36, LET=37, NULL=38, RETURN=39, UNTIL=40, SIZEOF=41, 
		THEN=42, TRUE=43, TYP=44, VAR=45, VOID=46, WHILE=47, IDENTIFIER=48, CONSTNUM=49, 
		COMMENT=50, CONSTCHAR=51, CONSTSTR=52, ERROR=53;
	public static final int
		RULE_source = 0, RULE_defs = 1, RULE_def = 2, RULE_myArg = 3, RULE_args1 = 4, 
		RULE_args_ = 5, RULE_args__ = 6, RULE_syn1 = 7, RULE_stmt_ = 8, RULE_stmt_2 = 9, 
		RULE_stmt__ = 10, RULE_stmt = 11, RULE_untilStmt = 12, RULE_whileStmt = 13, 
		RULE_ifStmt = 14, RULE_ifElseStmt = 15, RULE_letStmt = 16, RULE_stmtBase = 17, 
		RULE_exprEntry = 18, RULE_expr2nd = 19, RULE_expr3rd = 20, RULE_expr4th = 21, 
		RULE_expr5th = 22, RULE_expr6th = 23, RULE_expr7th = 24, RULE_prim = 25, 
		RULE_exprs_ = 26, RULE_exprs_2 = 27, RULE_exprs__ = 28, RULE_expr = 29, 
		RULE_exprEnd = 30, RULE_idColonType = 31, RULE_typeTuple = 32, RULE_typeTuple_ = 33, 
		RULE_functionCallNoParams = 34, RULE_functionCall = 35, RULE_functionCall_ = 36, 
		RULE_type1 = 37, RULE_syn21 = 38, RULE_type1Over = 39, RULE_atomType = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "defs", "def", "myArg", "args1", "args_", "args__", "syn1", 
			"stmt_", "stmt_2", "stmt__", "stmt", "untilStmt", "whileStmt", "ifStmt", 
			"ifElseStmt", "letStmt", "stmtBase", "exprEntry", "expr2nd", "expr3rd", 
			"expr4th", "expr5th", "expr6th", "expr7th", "prim", "exprs_", "exprs_2", 
			"exprs__", "expr", "exprEnd", "idColonType", "typeTuple", "typeTuple_", 
			"functionCallNoParams", "functionCall", "functionCall_", "type1", "syn21", 
			"type1Over", "atomType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'&'", "'|'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'*'", "'/'", "'%'", "'+'", "'-'", "'!'", "'.'", "'^'", "'='", "':'", 
			"','", "'{'", "'}'", "'('", "')'", "'['", "']'", "'int'", "'bool'", "'char'", 
			"'do'", "'else'", "'end'", "'false'", "'fun'", "'if'", "'in'", "'let'", 
			"'null'", "'return'", "'until'", "'sizeof'", "'then'", "'true'", "'typ'", 
			"'var'", "'void'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "AND", "OR", "EQU", "NEQ", "LT", "GT", "LEQ", "GEQ", 
			"MUL", "DIV", "MOD", "PLUS", "MINUS", "EXCL", "DOT", "POW", "ASSIGN", 
			"COLON", "COMMA", "LBRACE", "RBRACE", "LPARAN", "RPARAN", "LBRCKT", "RBRCKT", 
			"INT", "BOOL", "CHAR", "DO", "ELSE", "END", "FALSE", "FUN", "IF", "IN", 
			"LET", "NULL", "RETURN", "UNTIL", "SIZEOF", "THEN", "TRUE", "TYP", "VAR", 
			"VOID", "WHILE", "IDENTIFIER", "CONSTNUM", "COMMENT", "CONSTCHAR", "CONSTSTR", 
			"ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Prev25Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



		private Location loc(Token tok) { return new Location((LexAn.LocLogToken)tok); }
		private Location loc(Token     tok1, Token     tok2) { return new Location((LexAn.LocLogToken)tok1, (LexAn.LocLogToken)tok2); }
		private Location loc(Token     tok1, Locatable loc2) { return new Location((LexAn.LocLogToken)tok1, loc2); }
		private Location loc(Locatable loc1, Token     tok2) { return new Location(loc1, (LexAn.LocLogToken)tok2); }
		private Location loc(Locatable loc1, Locatable loc2) { return new Location(loc1, loc2); }


	public Prev25Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public AST.Nodes<AST.FullDefn> ast;
		public DefsContext c;
		public TerminalNode EOF() { return getToken(Prev25Parser.EOF, 0); }
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((SourceContext)_localctx).c = defs();
			setState(83);
			match(EOF);
			((SourceContext)_localctx).ast =  new AST.Nodes<AST.FullDefn>(((SourceContext)_localctx).c.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefsContext extends ParserRuleContext {
		public List<AST.FullDefn> ast;
		public DefContext a;
		public DefContext d;
		public DefsContext b;
		public DefContext def() {
			return getRuleContext(DefContext.class,0);
		}
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public DefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defs; }
	}

	public final DefsContext defs() throws RecognitionException {
		DefsContext _localctx = new DefsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defs);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				((DefsContext)_localctx).a = def();
				 ((DefsContext)_localctx).ast =  new ArrayList<AST.FullDefn>(); _localctx.ast.addLast(((DefsContext)_localctx).a.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				((DefsContext)_localctx).d = def();
				setState(90);
				((DefsContext)_localctx).b = defs();
				((DefsContext)_localctx).ast =  ((DefsContext)_localctx).b.ast; _localctx.ast.add(0, ((DefsContext)_localctx).d.ast);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefContext extends ParserRuleContext {
		public AST.FullDefn ast;
		public Token TYP;
		public Token IDENTIFIER;
		public Type1Context t;
		public Token VAR;
		public Type1Context type1;
		public Token FUN;
		public Args1Context args1;
		public Syn1Context impl;
		public TerminalNode TYP() { return getToken(Prev25Parser.TYP, 0); }
		public TerminalNode IDENTIFIER() { return getToken(Prev25Parser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(Prev25Parser.ASSIGN, 0); }
		public Type1Context type1() {
			return getRuleContext(Type1Context.class,0);
		}
		public TerminalNode VAR() { return getToken(Prev25Parser.VAR, 0); }
		public TerminalNode COLON() { return getToken(Prev25Parser.COLON, 0); }
		public TerminalNode FUN() { return getToken(Prev25Parser.FUN, 0); }
		public TerminalNode LPARAN() { return getToken(Prev25Parser.LPARAN, 0); }
		public Args1Context args1() {
			return getRuleContext(Args1Context.class,0);
		}
		public TerminalNode RPARAN() { return getToken(Prev25Parser.RPARAN, 0); }
		public Syn1Context syn1() {
			return getRuleContext(Syn1Context.class,0);
		}
		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_def);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				((DefContext)_localctx).TYP = match(TYP);
				setState(96);
				((DefContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(97);
				match(ASSIGN);
				setState(98);
				((DefContext)_localctx).t = type1();
				((DefContext)_localctx).ast =  new AST.TypDefn(loc(((DefContext)_localctx).TYP, ((DefContext)_localctx).t.ast), ((DefContext)_localctx).IDENTIFIER.getText(), ((DefContext)_localctx).t.ast);
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				((DefContext)_localctx).VAR = match(VAR);
				setState(102);
				((DefContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(103);
				match(COLON);
				setState(104);
				((DefContext)_localctx).type1 = type1();
				((DefContext)_localctx).ast =  new AST.VarDefn(loc(((DefContext)_localctx).VAR, ((DefContext)_localctx).type1.ast), ((DefContext)_localctx).IDENTIFIER.getText(), ((DefContext)_localctx).type1.ast);
				}
				break;
			case FUN:
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				((DefContext)_localctx).FUN = match(FUN);
				setState(108);
				((DefContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(109);
				match(LPARAN);
				setState(110);
				((DefContext)_localctx).args1 = args1();
				setState(111);
				match(RPARAN);
				setState(112);
				match(COLON);
				setState(113);
				((DefContext)_localctx).type1 = type1();
				setState(114);
				((DefContext)_localctx).impl = syn1(((DefContext)_localctx).FUN, ((DefContext)_localctx).IDENTIFIER, ((DefContext)_localctx).args1.ast, ((DefContext)_localctx).type1.ast);
				((DefContext)_localctx).ast = ((DefContext)_localctx).impl.ast;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MyArgContext extends ParserRuleContext {
		public AST.ParDefn ast;
		public Token IDENTIFIER;
		public Type1Context type1;
		public TerminalNode IDENTIFIER() { return getToken(Prev25Parser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(Prev25Parser.COLON, 0); }
		public Type1Context type1() {
			return getRuleContext(Type1Context.class,0);
		}
		public MyArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_myArg; }
	}

	public final MyArgContext myArg() throws RecognitionException {
		MyArgContext _localctx = new MyArgContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_myArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((MyArgContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(120);
			match(COLON);
			setState(121);
			((MyArgContext)_localctx).type1 = type1();
			((MyArgContext)_localctx).ast =  new AST.ParDefn(loc(((MyArgContext)_localctx).IDENTIFIER, ((MyArgContext)_localctx).type1.ast), ((MyArgContext)_localctx).IDENTIFIER.getText(), ((MyArgContext)_localctx).type1.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Args1Context extends ParserRuleContext {
		public List<AST.ParDefn> ast;
		public Args_Context args_;
		public Args_Context args_() {
			return getRuleContext(Args_Context.class,0);
		}
		public Args1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args1; }
	}

	public final Args1Context args1() throws RecognitionException {
		Args1Context _localctx = new Args1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_args1);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				((Args1Context)_localctx).args_ = args_();
				((Args1Context)_localctx).ast =  ((Args1Context)_localctx).args_.ast;
				}
				break;
			case RPARAN:
				enterOuterAlt(_localctx, 2);
				{
				((Args1Context)_localctx).ast = new ArrayList<AST.ParDefn>();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Args_Context extends ParserRuleContext {
		public List<AST.ParDefn> ast;
		public MyArgContext myArg;
		public Args__Context args__;
		public MyArgContext myArg() {
			return getRuleContext(MyArgContext.class,0);
		}
		public Args__Context args__() {
			return getRuleContext(Args__Context.class,0);
		}
		public Args_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args_; }
	}

	public final Args_Context args_() throws RecognitionException {
		Args_Context _localctx = new Args_Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_args_);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				((Args_Context)_localctx).myArg = myArg();
				setState(131);
				((Args_Context)_localctx).args__ = args__();
				((Args_Context)_localctx).ast =  ((Args_Context)_localctx).args__.ast; _localctx.ast.add(0, ((Args_Context)_localctx).myArg.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				((Args_Context)_localctx).myArg = myArg();
				((Args_Context)_localctx).ast =  new ArrayList<AST.ParDefn>(); _localctx.ast.addLast(((Args_Context)_localctx).myArg.ast);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Args__Context extends ParserRuleContext {
		public List<AST.ParDefn> ast;
		public Args_Context a;
		public TerminalNode COMMA() { return getToken(Prev25Parser.COMMA, 0); }
		public Args_Context args_() {
			return getRuleContext(Args_Context.class,0);
		}
		public Args__Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args__; }
	}
